gjøre om POST til get for å hente oppdragslinjer og fikse swagger kontrakt
